# DarkflameServer

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .env.example  .git-blame-ignore-revs  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeVariables.txt  CONTRIBUTING.md  ComponentDefinitions.py  ComponentFactories.py  DoObjectPreLoad.py  Docker.md  Docker_Windows.md  Dockerfile  LICENSE  README.md  README_original.md  SECURITY.md  build.sh  build_simclient.bat  build_simclient.sh  cliff.toml  docker-compose.yaml  docker-compose.yml  docker-entrypoint.sh  entrypoint.sh  example.env  setup.sh  systemd.example  test.cc  update.sh  valgrind.sh  versions.txt  z.c
dAuthServer/: AuthServer.cpp  CMakeLists.txt
dChatServer/: ActivityLogDefine.h  CMakeLists.txt  CSRCommandHandler.cpp  CSRCommandHandler.h  ChatHttpApi.cpp  ChatHttpApi.h  ChatIgnoreList.cpp  ChatIgnoreList.h  ChatJSONUtils.cpp  ChatJSONUtils.h  ChatPacketHandler.cpp  ChatPacketHandler.h  ChatServer.cpp  ChatServerApi.cpp  ChatServerApi.h  ChatWeb.cpp  ChatWeb.h  ChatWebAPI.cpp  ChatWebAPI.h  ChatWebApi.cpp  ChatWebApi.h  JSONUtils.cpp  JSONUtils.h  PlayerContainer.cpp  PlayerContainer.h  TeamContainer.cpp  TeamContainer.h  eActivityLogDefine.h
dCommon/: AMFDeserialize.cpp  AMFDeserialize.h  AMFFormat.cpp  AMFFormat.h  AMFFormat_BitStream.cpp  AMFFormat_BitStream.h  AddFriendResponseCode.h  AddFriendResponseType.h  Amf3.cpp  Amf3.h  AmfSerialize.cpp  AmfSerialize.h  BinaryIO.cpp  BinaryIO.h  BinaryPathFinder.cpp  BinaryPathFinder.h  Brick.h  BrickByBrickFix.cpp  BrickByBrickFix.h  CMakeLists.txt  Demangler.cpp  Demangler.h  Diagnostics.cpp  Diagnostics.h  DluAssert.h  FdbToSqlite.cpp  FdbToSqlite.h  Flag.h  Game.cpp  Game.h  GeneralUtils.cpp  GeneralUtils.h  Implementation.h  JSONUtils.cpp  JSONUtils.h  LDFFormat.cpp  LDFFormat.h  Logger.cpp  Logger.h  Lxfml.cpp  (+40 more)
dDashboardServer/: CMakeLists.txt  DashboardHelpers.cpp  DashboardHelpers.h  DashboardServer.cpp  DashboardShared.h  DashboardWeb.cpp  DashboardWeb.h  MasterPacketHandler.cpp  MasterPacketHandler.h
dDatabase/: CDAbstractProvider.h  CDAbstractSharedMemoryMap.h  CDAbstractSharedMemoryProvider.h  CDAbstractSqliteProvider.h  CDClientDatabase.cpp  CDClientDatabase.h  CDClientManager.cpp  CDClientManager.h  CDProvider.h  CMakeLists.txt  CharacterReputationMigration.cpp  CharacterReputationMigration.h  Database.cpp  Database.h  MigrationRunner.cpp  MigrationRunner.h  ModelNormalizeMigration.cpp  ModelNormalizeMigration.h  MySQLDatabase.cpp  MySQLDatabase.h
dECS/: CMakeLists.txt  Core.cpp  Core.h  ECS.cpp  ECS.h  Iter.h  System.cpp
dGame/: AdditionalEntityData.cpp  AdditionalEntityData.h  AdditionalItemData.cpp  AdditionalItemData.h  CMakeLists.txt  Character.cpp  Character.h  Entity.cpp  Entity.h  Entity.tcc  EntityInitializeOld.cc  EntityManager.cpp  EntityManager.h  EntityTemplate.cpp  EntityTemplate.h  LeaderboardManager.cpp  LeaderboardManager.h  Lookup.cpp  Lookup.h  ModifierCategory.h  ModifierInstance.cpp  ModifierInstance.h  ModifierName.cpp  ModifierName.h  ModifierNameTemplate.cpp  ModifierNameTemplate.h  ModifierNameType.h  ModifierOperator.h  ModifierRarity.cpp  ModifierRarity.h  ModifierScale.cpp  ModifierScale.h  ModifierTemplate.cpp  ModifierTemplate.h  ModifierType.cpp  ModifierType.h  Nejlika.cpp  Nejlika.h  NejlikaData.cpp  NejlikaData.h  (+24 more)
dMasterServer/: CMakeLists.txt  InstanceManager.cpp  InstanceManager.h  MasterApi.cpp  MasterApi.h  MasterServer.cpp  ObjectIDManager.cpp  ObjectIDManager.h  PersistentIDManager.cpp  PersistentIDManager.h  Start.cpp  Start.h  StartK8s.cpp  StartLocal.cpp
dNavigation/: CMakeLists.txt  DetourExtensions.h  dNavMesh.cpp  dNavMesh.h
dNet/: AuthPackets.cpp  AuthPackets.h  BitStreamUtils.cpp  BitStreamUtils.h  BitstreamUtils.h  CMakeLists.txt  ChatPackets.cpp  ChatPackets.h  ClientPackets.cpp  ClientPackets.h  CommonPackets.cpp  CommonPackets.h  MailInfo.cpp  MailInfo.h  MasterPackets.cpp  MasterPackets.h  PacketUtils.cpp  PacketUtils.h  RakNetPeer.cpp  RakNetPeer.h  RakNetTransportLayer.cpp  RakNetTransportLayer.h  TcpPeer.cpp  TcpPeer.h  TcpSession.cpp  TcpSession.h  TcpTransportLayer.cpp  TcpTransportLayer.h  TransportLayer.h  TransportPeerInterface.h  WorldPackets.cpp  WorldPackets.h  ZoneInstanceManager.cpp  ZoneInstanceManager.h  dMessageIdentifiers.h  dNetCommon.h  dServer.cpp  dServer.h
dPhysics/: CMakeLists.txt  Singleton.h  dpCollisionChecks.cpp  dpCollisionChecks.h  dpCollisionGroups.h  dpCommon.h  dpEntity.cpp  dpEntity.h  dpGrid.cpp  dpGrid.h  dpShapeBase.cpp  dpShapeBase.h  dpShapeBox.cpp  dpShapeBox.h  dpShapeSphere.cpp  dpShapeSphere.h  dpWorld.cpp  dpWorld.h  main.cpp
dScripts/: ActMine.cpp  ActMine.h  ActNinjaTurret.cpp  ActNinjaTurret.h  ActParadoxPipeFix.cpp  ActParadoxPipeFix.h  ActPlayerDeathTrigger.cpp  ActSharkPlayerDeathTrigger.cpp  ActSharkPlayerDeathTrigger.h  ActVehicleDeathTrigger.cpp  ActivityManager.cpp  ActivityManager.h  AgBugsprayer.cpp  AgBugsprayer.h  AgBusDoor.cpp  AgBusDoor.h  AgCagedBricksServer.cpp  AgCagedBricksServer.h  AgDarkSpiderling.cpp  AgDarkSpiderling.h  AgDarklingMech.cpp  AgDarklingMech.h  AgFans.cpp  AgFans.h  AgImagSmashable.cpp  AgImagSmashable.h  AgJetEffectServer.cpp  AgJetEffectServer.h  AgLaserSensorServer.cpp  AgLaserSensorServer.h  AgMonumentBirds.cpp  AgMonumentLaserServer.cpp  AgMonumentLaserServer.h  AgMonumentRaceCancel.cpp  AgMonumentRaceCancel.h  AgMonumentRaceGoal.cpp  AgMonumentRaceGoal.h  AgPicnicBlanket.cpp  AgPicnicBlanket.h  AgPropGuard.cpp  (+481 more)
dSimClient/: CMakeLists.txt  README.md  SimBehavior.cpp  SimBehavior.h  SimClient.cpp  SimConfig.cpp  SimConfig.h  SimUser.cpp  SimUser.h  SimWorld.cpp  SimWorld.h
dWorldServer/: CMakeLists.txt  ObjectIDManager.cpp  ObjectIDManager.h  PerformanceManager.cpp  PerformanceManager.h  WorldServer.cpp
dZoneManager/: CMakeLists.txt  LUTriggers.h  Level.cpp  Level.h  Raw.cpp  Raw.h  Spawner.cpp  Spawner.h  WorldConfig.h  Zone.cpp  Zone.h  dZMCommon.h  dZoneManager.cpp  dZoneManager.h
tests/: AMFDeserializeTests.cpp  CMakeLists.txt  CommonCxxTests.h  TestEncoding.cpp  (+2 more)
(+2057 files in other folders)
